[gd_scene format=3 uid="uid://cp3t28vtllldm"]

[ext_resource type="Shader" uid="uid://beaumfjfo678k" path="res://assets/graphics/shaders/pause.gdshader" id="1_iohl6"]
[ext_resource type="Script" uid="uid://cmhmq8ieosu3x" path="res://scripts/menus/pause.gd" id="1_q52mi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q52mi"]
shader = ExtResource("1_iohl6")
shader_parameter/amount = 0.0

[sub_resource type="Animation" id="Animation_ino5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:material:shader_parameter/amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wxdxv"]
resource_name = "blur"
length = 0.3
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.28666672),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ColorRect:material:shader_parameter/amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.29000002),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8470000402325]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5jck"]
_data = {
&"RESET": SubResource("Animation_ino5w"),
&"blur": SubResource("Animation_wxdxv")
}

[node name="Pause" type="Control" unique_id=1063596969]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q52mi")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=917529557]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=2001145335]
process_mode = 3
material = SubResource("ShaderMaterial_q52mi")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 1.0
offset_right = 3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer" unique_id=439685147]
process_mode = 2
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -149.0
offset_right = 143.5
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer" unique_id=1611167333]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer" unique_id=1406149423]
process_mode = 3
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Resume"
expand_icon = true

[node name="Help" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer" unique_id=1130541538]
process_mode = 3
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Tutorial"

[node name="Quit" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer" unique_id=967894007]
process_mode = 3
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer" unique_id=1962353177]
process_mode = 3
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_b5jck")

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
